# sims4modorganizer

./: Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs  util.rs
src/commands/: edit.rs  list.rs  mod.rs  scan.rs  tags.rs  util.rs
src/entities/: mod.rs  mod_hash.rs  mod_tag_relation.rs  prelude.rs  sims_mod.rs  tag.rs
src/migrator/: m20220101_000001_create_sims_mods.rs  m20220101_000002_create_tags.rs  m20220101_000003_create_hashes.rs  m20220101_000004_create_mod_tag_relations.rs  mod.rs
