[package]
name = "sims4modorganizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2"
inquire = "0.6.2"
url = "2.5.0"
sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = "^0.12.0"
futures = "0.3.28"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
boxy = "0.1.0"
tracing-unwrap = "0.10"
itertools = "0.12.1"
radix_trie = "0.2.1"
opener = "0.6.1"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]
